--- a/06 - Pricing Table Project (Using Flexbox)/index.html
+++ b/06 - Pricing Table Project (Using Flexbox)/index.html
@@ -6,63 +6,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Sono', sans-serif;
-    }
-    .pricing-container{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      gap: 2rem;
-    }
-
-    .pricing-plan{
-      flex: 1;
-      background-color: rgb(229, 231, 233);
-      max-width: 400px;
-      padding: 20px;
-      text-align: center;
-      border-radius: 5px;
-    }
-    .plan-title{
-      font-weight: bold;
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    .plan-price{
-      font-weight: bold;
-      font-size: 48px;
-      margin-bottom: 10px;
-    }
-    li{
-      list-style: none;
-
-    }
-    .plan-features{
-      padding: 0;
-      margin: 0;
-    }
-    .plan-features li{
-      margin-bottom: 20px;
-    }
-    .plan-button{
-      background-color: #ff6600;
-      padding: 10px;
-      border-radius: 5px;
-      color: azure;
-      border: none;
-    }
-
-    /* Hint: What can you do with a media query and flexbox? */
-    @media (max-width: 1250px) {
-      .pricing-container{
-        flex-direction: column;
-        height: 100%;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
