--- a/08 - Pet Adoption (project)/index.html
+++ b/08 - Pet Adoption (project)/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS</title>
     <link rel="stylesheet" href="style.css" />
-     <!-- <link rel="stylesheet" href="/index.css">
-  </head> -->
+  </head>
   <body>
     <h2><i>adoptme.com</i></h2>
     <h1>Adopt a <span>Pet</span> Today</h1>
